<resources>
    <string name="app_name">Task</string>
    <string name="my_name">Amanda Carvalho Filgueiras</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="status_task_todo">A Fazer</string>
    <string name="status_task_doing">Fazendo</string>
    <string name="status_task_done">Feitas</string>
    <string name="hint_edit_email">Digite seu e-mail</string>
    <string name="hint_edit_password">Digite sua senha</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_title_warning">Atenção</string>
    <string name="text_button_warning">Entendi</string>
    <string name="text_message">Mensagem</string>
    <string name="password_empty">Preencha a senha!</string>
    <string name="email_empty">Preencha seu email!</string>
    <string name="email_text">E-mail</string>
    <string name="password_text">Senha</string>
    <string name="text_new_task">Nova Tarefa</string>
    <string name="text_description">Descrição</string>
    <string name="text_status">Status</string>
    <string name="text_save">Salvar</string>
    <string name="text_send">Enviar</string>
    <string name="text_delete_sucess_task">Tarefa removida com sucesso.</string>
    <string name="error_generic">Ocorreu um erro! Por favor tente novamente mais tarde.</string>
    <string name="text_list_task_empty">Nenhuma tarefa cadastrada!</string>
    <string name="text_list_task_load">Aguarde, estamos carregando as informações</string>

    <string name="text_title_login_fragment">Login</string>
    <string name="text_title_register_fragment">Criar conta</string>
    <string name="text_title_recover_fragment">Recuperar conta</string>

    <string name="password_empty_register_fragment">Preencha uma senha!</string>
    <string name="email_empty_register_fragment">Preencha um e-mail válido!</string>
    <string name="text_button_register_fragment">Enviar</string>
    <string name="text_title_toolbar_register_fragment">Criar conta</string>
    <string name="text_info_recover_account_fragment">Informe seu email de cadastro para receber \n um link para alteração de senha.</string>
    <string name="text_title_toolbar_recover_account_fragment">Recuperar conta</string>
    <string name="text_button_recover_account_fragment">Enviar</string>
    <string name="text_hint_new_task">Informe sua nova Tarefa</string>


    <string name="text_doing">Fazendo</string>
    <string name="text_todo">A Fazer</string>
    <string name="text_done">Feito</string>

    <string name="text_edit">Editar</string>
    <string name="text_remove">Remover</string>
    <string name="text_details">Detalhes</string>
    <string name="text_back">Anterior</string>
    <string name="text_forward">Próximo</string>
    <string name="text_logout">Logout</string>
    <string name="text_description_tabs">Tabs</string>

    <string name="description_empty_form_task_fragment">Preencha uma descrição!</string>
    <string name="text_save_sucess_form_task_fragment">Tarefa salva com sucesso</string>
    <string name="text_title_dialog_delete">Excluir tarefa</string>
    <string name="text_message_dialog_delete">Você realmente deseja remover esta atividade da sua lista?</string>
    <string name="text_button_dialog_confirm">Excluir</string>
    <string name="text_toolbar_update_form_task_fragment">Editando tarefa...</string>
    <string name="text_update_sucess_form_task_fragment">Tarefa editada com sucesso!</string>
    <string name="text_email_sent_to_recover_account">Um e-mail foi enviado para sua caixa de entrada.</string>

    <!--Erros Firebase Athentication-->
    <string name="account_not_registered_register_fragment">Nenhuma conta encontrada em este e-mail.</string>
    <string name="invalid_email_register_fragment">Insira um e-mail válido.</string>
    <string name="invalid_password_register_fragment">Senha inválida, tente novamente.</string>
    <string name="email_in_user_register_fragment">Este e-mail já está em uso.</string>
    <string name="strong_password_register_fragment">Insira uma senha mais forte.</string>
</resources>