<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.FormTaskFragment"
    android:padding="20dp"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back"
            android:paddingTop="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/text_new_task"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"/>
        </com.google.android.material.appbar.MaterialToolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_description"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextDescricao"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            style="@style/EditTextTheme"
            android:hint="@string/text_hint_new_task"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewStatus"
            android:layout_marginTop="16dp"
            android:text="@string/text_status"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextDescricao"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:id="@+id/radioGroup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewStatus">

                <RadioButton
                    android:layout_width="88dp"
                    android:layout_height="48dp"
                    android:buttonTint="@color/black"
                    android:id="@+id/rbTodo"
                    android:text="@string/text_todo"
                    android:textColor="@color/white"
                    android:theme="@style/MyRadioButton"
                    android:checked="true"/>

                <RadioButton
                    android:layout_width="88dp"
                    android:layout_height="48dp"
                    android:buttonTint="@color/black"
                    android:id="@+id/rbDoing"
                    android:text="@string/text_doing"
                    android:textColor="@color/white"
                    android:theme="@style/MyRadioButton"/>

                <RadioButton
                    android:layout_width="88dp"
                    android:layout_height="48dp"
                    android:buttonTint="@color/black"
                    android:id="@+id/rbDone"
                    android:text="@string/text_done"
                    android:textColor="@color/white"
                    android:theme="@style/MyRadioButton"/>
            </RadioGroup>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSave"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_btn"
            android:text="@string/text_save"
            android:textAllCaps="false"
            android:textColor="@color/color_default"
            app:backgroundTint="@null"
            app:layout_editor_absoluteX="16dp"
            app:layout_editor_absoluteY="221dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroup"/>


        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/white"
            android:visibility="invisible"
            tools:layout_editor_absoluteX="152dp"
            tools:layout_editor_absoluteY="278dp"
            tools:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSave"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</ScrollView>